--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,25 @@
 version: "3.9"
 services:
+  # PostgreSQL 数据库（后台管理系统需要）
+  postgres:
+    image: postgres:15-alpine
+    container_name: nextchat-db
+    restart: unless-stopped
+    environment:
+      POSTGRES_DB: nextchat
+      POSTGRES_USER: nextchat
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-nextchat_secure_password}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U nextchat"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # NextChat 应用（带后台管理系统）
   chatgpt-next-web:
     profiles: [ "no-proxy" ]
     container_name: chatgpt-next-web
@@ -7,6 +27,7 @@ services:
     ports:
       - 3000:3000
     environment:
+      # 原有环境变量
       - OPENAI_API_KEY=$OPENAI_API_KEY
       - GOOGLE_API_KEY=$GOOGLE_API_KEY
       - CODE=$CODE
@@ -17,6 +38,17 @@ services:
       - ENABLE_BALANCE_QUERY=$ENABLE_BALANCE_QUERY
       - DISABLE_FAST_LINK=$DISABLE_FAST_LINK
       - OPENAI_SB=$OPENAI_SB
+      
+      # 新增：后台管理系统配置
+      - DATABASE_URL=postgresql://nextchat:${DB_PASSWORD:-nextchat_secure_password}@postgres:5432/nextchat
+      - JWT_SECRET=${JWT_SECRET:-change-this-jwt-secret-in-production}
+      - ENCRYPTION_KEY=${ENCRYPTION_KEY:-your-encryption-key-32-chars-min}
+      - ALLOW_REGISTER=${ALLOW_REGISTER:-true}
+    depends_on:
+      postgres:
+        condition: service_healthy
+    volumes:
+      - app_data:/app/data
 
   chatgpt-next-web-proxy:
     profiles: [ "proxy" ]
@@ -25,6 +57,7 @@ services:
     ports:
       - 3000:3000
     environment:
+      # 原有环境变量
       - OPENAI_API_KEY=$OPENAI_API_KEY
       - GOOGLE_API_KEY=$GOOGLE_API_KEY
       - CODE=$CODE
@@ -36,3 +69,18 @@ services:
       - ENABLE_BALANCE_QUERY=$ENABLE_BALANCE_QUERY
       - DISABLE_FAST_LINK=$DISABLE_FAST_LINK
       - OPENAI_SB=$OPENAI_SB
+      
+      # 新增：后台管理系统配置
+      - DATABASE_URL=postgresql://nextchat:${DB_PASSWORD:-nextchat_secure_password}@postgres:5432/nextchat
+      - JWT_SECRET=${JWT_SECRET:-change-this-jwt-secret-in-production}
+      - ENCRYPTION_KEY=${ENCRYPTION_KEY:-your-encryption-key-32-chars-min}
+      - ALLOW_REGISTER=${ALLOW_REGISTER:-true}
+    depends_on:
+      postgres:
+        condition: service_healthy
+    volumes:
+      - app_data:/app/data
+
+volumes:
+  postgres_data:
+  app_data:
