--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
   chatgpt-next-web:
     profiles: [ "no-proxy" ]
     container_name: chatgpt-next-web
-    image: yidadaa/chatgpt-next-web
+    image: ghcr.io/xiaoshi569/nextchat:latest
     ports:
       - 3000:3000
     environment:
@@ -53,7 +53,7 @@ services:
   chatgpt-next-web-proxy:
     profiles: [ "proxy" ]
     container_name: chatgpt-next-web-proxy
-    image: yidadaa/chatgpt-next-web
+    image: ghcr.io/xiaoshi569/nextchat:latest
     ports:
       - 3000:3000
     environment:
