--- a/env.docker.example
+++ b/env.docker.example
@@ -1,30 +1,44 @@
-# Docker Compose 环境变量配置
-# 复制此文件为 .env 并填写实际值
+# NextChat Docker 环境变量配置
+# 复制此文件为 .env 并修改值
+
+# ===========================================
+# 必需配置（生产环境必须修改！）
+# ===========================================
 
 # 数据库密码
-DB_PASSWORD=nextchat_secure_password_change_me
+DB_PASSWORD=nextchat_password
 
-# JWT密钥（生产环境必须修改！）
-JWT_SECRET=your-super-secret-jwt-key-please-change-in-production
+# JWT密钥（用于生成用户登录Token，至少32位随机字符）
+JWT_SECRET=your-jwt-secret-change-in-production
 
-# 加密密钥（至少32字符，生产环境必须修改！）
-ENCRYPTION_KEY=your-encryption-key-32-characters-minimum-required
+# 加密密钥（用于加密存储API密钥，必须32字符以上）
+ENCRYPTION_KEY=your-32-chars-encryption-key-min
 
-# 是否允许用户注册
+# ===========================================
+# 可选配置
+# ===========================================
+
+# 是否允许用户注册（true=开放注册，false=关闭注册，只有管理员可以添加用户）
 ALLOW_REGISTER=true
 
-# AI API 配置（可选，也可以在管理后台配置）
-OPENAI_API_KEY=
-GOOGLE_API_KEY=
-BASE_URL=
-CODE=
-
-# 其他配置
-OPENAI_ORG_ID=
-HIDE_USER_API_KEY=
-DISABLE_GPT4=
-ENABLE_BALANCE_QUERY=
-DISABLE_FAST_LINK=
-OPENAI_SB=
+# 代理配置（如果服务器需要代理访问AI API）
+# 例如：http://127.0.0.1:7890
 PROXY_URL=
 
+# ===========================================
+# 说明
+# ===========================================
+# 
+# 1. AI API密钥在哪里配置？
+#    登录管理员后台（/#/admin）在"API密钥管理"中添加
+#    支持多个提供商：OpenAI、Anthropic、Google、DeepSeek等
+# 
+# 2. 默认管理员账号
+#    邮箱：admin@nextchat.com
+#    密码：admin123
+#    ⚠️ 首次登录后请立即修改密码
+# 
+# 3. 如何生成安全密钥？
+#    方法1：openssl rand -base64 32
+#    方法2：node -e "console.log(require('crypto').randomBytes(32).toString('base64'))"
+#    方法3：https://generate-secret.vercel.app/32
