--- a/env.docker.example
+++ b/env.docker.example
@@ -1,44 +1,56 @@
 # NextChat Docker 环境变量配置
-# 复制此文件为 .env 并修改值
+# 使用方法：复制此文件为 .env 并修改下面的值
 
 # ===========================================
-# 必需配置（生产环境必须修改！）
+# 🔐 必需配置（生产环境必须修改！）
 # ===========================================
 
-# 数据库密码
+# 数据库密码（建议使用强密码）
 DB_PASSWORD=nextchat_password
 
-# JWT密钥（用于生成用户登录Token，至少32位随机字符）
+# JWT 密钥（用于生成用户登录令牌，建议32位以上随机字符串）
 JWT_SECRET=your-jwt-secret-change-in-production
 
-# 加密密钥（用于加密存储API密钥，必须32字符以上）
+# 加密密钥（用于加密存储的 API 密钥，必须32字符以上）
 ENCRYPTION_KEY=your-32-chars-encryption-key-min
 
 # ===========================================
-# 可选配置
+# ⚙️ 可选配置
 # ===========================================
 
-# 是否允许用户注册（true=开放注册，false=关闭注册，只有管理员可以添加用户）
+# 是否允许用户注册
+# true  = 开放注册，任何人都可以注册账号
+# false = 关闭注册，只有管理员可以添加用户
 ALLOW_REGISTER=true
 
-# 代理配置（如果服务器需要代理访问AI API）
-# 例如：http://127.0.0.1:7890
+# 代理配置（如果服务器需要通过代理访问 AI API）
+# 示例：http://127.0.0.1:7890
 PROXY_URL=
 
 # ===========================================
-# 说明
+# 📖 使用说明
 # ===========================================
 # 
-# 1. AI API密钥在哪里配置？
-#    登录管理员后台（/#/admin）在"API密钥管理"中添加
-#    支持多个提供商：OpenAI、Anthropic、Google、DeepSeek等
+# ❓ AI API 密钥在哪里配置？
+#    不在这里配置！请按以下步骤操作：
+#    1. 启动服务后访问 http://localhost:3000
+#    2. 使用管理员账号登录
+#    3. 访问管理后台 /#/admin
+#    4. 点击"API密钥管理"添加你的密钥
+#    支持的提供商：OpenAI、Anthropic、Google、DeepSeek 等
 # 
-# 2. 默认管理员账号
+# 👤 默认管理员账号是什么？
 #    邮箱：admin@nextchat.com
 #    密码：admin123
-#    ⚠️ 首次登录后请立即修改密码
+#    ⚠️  首次登录后请立即在设置中修改密码！
 # 
-# 3. 如何生成安全密钥？
-#    方法1：openssl rand -base64 32
-#    方法2：node -e "console.log(require('crypto').randomBytes(32).toString('base64'))"
-#    方法3：https://generate-secret.vercel.app/32
+# 🔑 如何生成安全的密钥？
+#    方法1 (Linux/Mac)：openssl rand -base64 32
+#    方法2 (Node.js)：node -e "console.log(require('crypto').randomBytes(32).toString('base64'))"
+#    方法3 (在线)：https://generate-secret.vercel.app/32
+# 
+# 🚀 快速开始
+#    1. 复制本文件：cp env.docker.example .env
+#    2. 编辑 .env 文件，修改上面的密码和密钥
+#    3. 启动服务：docker-compose up -d
+#    4. 访问应用：http://localhost:3000
